--- a/src/view/AuftragAnlegen.form
+++ b/src/view/AuftragAnlegen.form
@@ -23,12 +23,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnlegen" alignment="0" pref="1094" max="32767" attributes="0"/>
+          <Component id="AuftragAnlegen" alignment="0" pref="1138" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnlegen" alignment="0" pref="826" max="32767" attributes="0"/>
+          <Component id="AuftragAnlegen" alignment="0" pref="830" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -52,9 +52,15 @@
                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <Component id="jSpeichern_aa" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jbAbbrechen_aa" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Component id="jSpeichern_aa" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="jbAbbrechen_aa" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="Auftragsposition_AuftragAnlegen" alignment="0" min="-2" pref="866" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace pref="235" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
@@ -86,19 +92,17 @@
                                       <Component id="jLabel73" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="jtfErfassungsdatum_aa" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jtfLieferdatum_aa" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jtfAbschlussdatum_aa" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jcbAuftragsart" alignment="0" pref="150" max="32767" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jftfAbschlussdatum_AuftragAnlegen" min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Component id="jcbAuftragsart" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Component id="jftfLieferdatum_aa" min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Component id="jftfErfassungsdatum_aa" min="-2" pref="150" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace min="-2" pref="105" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="318" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="Auftragsposition_AuftragAnlegen" alignment="0" min="-2" pref="866" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="169" max="32767" attributes="0"/>
               </Group>
               <Component id="jSeparator9" alignment="0" max="32767" attributes="0"/>
           </Group>
@@ -121,24 +125,24 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfGPID_aa" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfErfassungsdatum_aa" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel21" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftfErfassungsdatum_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel17" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfGPname_aa" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel22" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfLieferdatum_aa" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftfLieferdatum_aa" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel73" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtfAbschlussdatum_aa" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jcbStatus" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel41" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftfAbschlussdatum_AuftragAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="jLabel25" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane5" min="-2" max="-2" attributes="0"/>
@@ -149,7 +153,7 @@
                       <Component id="jbAbbrechen_aa" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jSpeichern_aa" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="42" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -257,26 +261,12 @@
             <Property name="text" type="java.lang.String" value="Erfassungsdatum:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtfErfassungsdatum_aa">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="14" style="0"/>
-            </Property>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabel22">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Lieferdatum:"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="jtfLieferdatum_aa">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="14" style="0"/>
-            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel25">
@@ -338,13 +328,6 @@
             <Property name="text" type="java.lang.String" value="Abschlussdatum"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtfAbschlussdatum_aa">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="14" style="0"/>
-            </Property>
-          </Properties>
-        </Component>
         <Container class="javax.swing.JPanel" name="Auftragsposition_AuftragAnlegen">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -366,8 +349,8 @@
                               <Component id="jScrollPane8" min="-2" pref="779" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jbMinus_AuftragAnlegen" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jbPlus_AuftragAnlegen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbMinus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
+                                  <Component id="jbPlus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
@@ -417,7 +400,7 @@
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="jbPlus_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="jbMinus_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
@@ -453,7 +436,7 @@
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="jtfGesamtwert_AuftragAnlegen" min="-2" pref="25" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="jbLupe_AuftragAnlegen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbLupe_AuftragAnlegen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                               <Component id="jScrollPane8" min="-2" pref="173" max="-2" attributes="0"/>
@@ -617,6 +600,12 @@
             <AuxValue name="JavaCodeGenerator_VariableLocal" type="java.lang.Boolean" value="true"/>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="0"/>
           </AuxValues>
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftfAbschlussdatum_AuftragAnlegen">
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftfLieferdatum_aa">
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftfErfassungsdatum_aa">
         </Component>
       </SubComponents>
     </Container>
