--- a/src/view/ArtikelBearbeiten.form
+++ b/src/view/ArtikelBearbeiten.form
@@ -28,10 +28,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="ArtikelBearbeiten" min="-2" pref="731" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="22" max="32767" attributes="0"/>
-          </Group>
+          <Component id="ArtikelBearbeiten" alignment="0" pref="740" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -119,7 +116,7 @@
                       <Component id="jbAbbrechenArtikelBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jbSpeichernArtikelBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="30" max="32767" attributes="0"/>
+                  <EmptySpace pref="39" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
